src/scss/_home-hero.scss
.hero {
  padding: 8rem 4rem;
  background-image: url(../assets/images/globalnet.jpg);
  background-attachment: fixed;
  background-size: cover;
  background-position: right;
  background-repeat: no-repeat;
  color: $color-white;
  text-shadow: 2px 4px 7px rgba($color-black, 0.7);
  display: flex;
  border-bottom: 20px solid $color-accent;


  @include tablet-landscape {
    flex-direction: column;
  }


  &__left {
    width: 50%;
    display: flex;
    align-items: center;
    padding: 4vw;

    @include tablet-landscape {
      width: 100%;
    }
    
      
    }

  &__right {
    font-size: 3vw;
    line-height: 1.25;
    text-align: right;
    flex: 1;
    padding: 5rem;

    @include tablet-landscape {
      font-size: 6vw;
    }

    ul {
      padding-inline-start: 0;
    }
    li {
      text-shadow: $font-shadow;
      margin-bottom: .4rem;
      list-style: none;

      a {
        color: $color-white;
        text-decoration: none;
        cursor: pointer;
        transition: all .3s;
        
        &:hover {
          padding: 1rem 3rem;
          background: rgba(0,0,0,.5);
          color: $color-primary;
        }
      }
    }
  }
}

